# mijnloon

./: .gitignore  Cargo.toml  README.md  Rocket.toml
common/: Cargo.toml
common/src/: custom_event.rs  lib.rs  util.rs
config/: username.toml.example
manager/: Cargo.toml
manager/src/: main.rs
public/: index.html
public/src/: fullcalendar_icalendar.js  main.js  style.css
server/: Cargo.toml
server/src/: main.rs  schedule.rs
src/: config.rs  custom_event.rs  main.rs  schedule.rs  util.rs
