[package]
name = "mijnloon"
version = "1.0.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
iana-time-zone = "0.1.60"
icalendar = "0.16.1"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["blocking", "cookies"] }
rpassword = "7.3.1"
scraper = "0.19.0"
