[package]
name = "mijnloon"
version = "1.2.13"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
file-lock = "2.1.11"
iana-time-zone = "0.1.60"
icalendar = "0.16.1"
once_cell = "1.19.0"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["blocking", "cookies"] }
rpassword = "7.3.1"
scraper = "0.19.0"
serde = "1.0.203"
serde_json = "1.0.117"
