[package]
name = "mijnloon"
version = "3.0.1"
edition = "2021"

[dependencies]
chrono = "0.4.38"
confy = "0.6.1"
file-lock = "2.1.11"
iana-time-zone = "0.1.61"
icalendar = "0.16.9"
json = "0.12.4"
reqwest = { version = "0.12.9", features = ["blocking", "cookies"] }
rocket = { version = "0.5.1", features = [ "json" ] }
scraper = "0.21.0"
serde = { version = "1.0.215", features = [ "derive" ] }
