[package]
name = "server"
version = "2.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
common = { path = "../common" }
iana-time-zone = "0.1.60"
icalendar = "0.16.1"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["blocking", "cookies"] }
scraper = "0.19.0"
